force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Junction__mdt/ucinn_ascendv2__Manual_Merge_Junction__mdt.object-meta.xml
<CustomObject>
    <description>Allows for relation between a Merge Setting and a Merge Tab. This allows us to associate multiple record types with a tab and vice versa.</description>
    <label>Merge Junction</label>
    <pluralLabel>Merge Junctions</pluralLabel>
</CustomObject>