force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Junction__mdt/fields/ucinn_ascendv2__Disable__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Disable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for disabling the connection between a tab and a setting.</description>
    <inlineHelpText>Allows for disabling the connection between a tab and a setting.</inlineHelpText>
    <label>Disable</label>
    <type>Checkbox</type>
</CustomField>