force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Junction__mdt/fields/ucinn_ascendv2__Disable_for_Manual_Merge__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Disable_for_Manual_Merge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the related tab for the manual merge process.</description>
    <inlineHelpText>Disables the related tab for the manual merge process.</inlineHelpText>
    <label>Disable for Manual Merge</label>
    <type>Checkbox</type>
</CustomField>