force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Junction__mdt/fields/ucinn_ascendv2__Manual_Merge_Tab__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Manual_Merge_Tab__c</fullName>
    <description>Merge Tab to look up to.</description>
    <inlineHelpText>Merge Tab to look up to.</inlineHelpText>
    <label>Merge Tab</label>
    <referenceTo>ucinn_ascendv2__Manual_Merge_Tab__mdt</referenceTo>
    <relationshipLabel>Merge Junctions</relationshipLabel>
    <relationshipName>Manual_Merge_Junctions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>