force-app/main/default/objects/ucinn_ascendv2__Manual_Merge_Junction__mdt/listViews/Hamilton_Custom_Merge_Junctions.listView-meta.xml
<ListView>
    <fullName>Hamilton_Custom_Merge_Junctions</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ucinn_ascendv2__Disable__c</columns>
    <columns>ucinn_ascendv2__Disable_for_Auto_Merge__c</columns>
    <columns>ucinn_ascendv2__Disable_for_Manual_Merge__c</columns>
    <columns>ucinn_ascendv2__Manual_Merge_Setting__c</columns>
    <columns>ucinn_ascendv2__Manual_Merge_Tab__c</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NamespacePrefix</field>
        <operation>equals</operation>
    </filters>
    <label>Hamilton Custom Merge Junctions</label>
    <language>en_US</language>
</ListView>